<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_link">https://www.facebook.com/imaginariumf</string>
    <string name="twitter_link">https://twitter.com/ImaginariumF</string>
    <string name="google_plus_link">https://plus.google.com/u/0/116270946991852741743/posts</string>
    <string name="app_name">Imaginarium</string>
    <string name="artists_activity">Artistes</string>
    <string name="artist_activity">Artiste</string>
    <string name="infos_activity">Infos</string>
    <string name="info_activity">Info</string>
    <string name="programmation_activity">Programmation</string>
    <string name="map_activity">Plan intéractif</string>
    <string name="map_activity_deactivated">Le plan sera bientôt disponible</string>
    <string name="photos_taking_activity">Photos</string>
    <string name="photos_validating_activity">Photos</string>
    <string name="photo_activity_deactivated">Bientôt disponible</string>
    <string name="partner_activity">Partenaires</string>
    <string name="back_button">Retour arrière</string>
    <string name="header_icon">Icone header</string>
    <string name="not_implemented">Pas encore fonctionnel</string>
    <string name="no_internet_connection">Vous n\'êtes pas connecté à internet</string>

    <!--  -->
    <!-- MainMenuActivity -->
    <!--  -->

    <string name="mainLogo">Imaginarium Festival</string>
    <string name="artistImageButtonDescription">Artistes</string>
    <string name="infosImageButtonDescription">Infos</string>
    <string name="programmationImageButtonDescription">Programmation</string>
    <string name="planImageButtonDescription">Plan</string>
    <string name="photosImageButtonDescription">Photos</string>
    <string name="partnersImageButtonDescription">Partenaires</string>
    <string name="facebook_icon">Facebook Imaginarium</string>
    <string name="twitter_icon">Twitter Imaginarium</string>
    <string name="google_plus_icon">Google+ Imaginarium</string>
    <string name="about">Made with &lt;3 from Compy</string>
    <string name="news_panel">News</string>
    <string name="no_news">Pas de news à afficher</string>
    <!-- <string name="twitter_panel">Tweets</string> -->
    <!-- <string name="no_twitter">Pas de tweet à afficher</string> -->


    <!--  -->
    <!-- Notifications -->
    <!--  -->
    <string name="notification_content">Sur scène dans 15 minutes !</string>

    <!--  -->
    <!-- BackTask -->
    <!--  -->
    <string name="update_beginning">Mise à jour des données</string>
    <string name="update_ending">...la mise à jour est terminée</string>
    <string name="update_progress">Mise à jour des données : </string>

    <!--  -->
    <!-- ArtistsActivity -->
    <!--  -->
    <string name="artists_title_1">LES</string>
    <string name="artists_title_2">ARTISTES</string>
    <string name="action_alpha_sort">Nom</string>
    <string name="action_type_sort">Style</string>
    <string name="artistListItemIcon">Icone Artiste</string>

    <!--  -->
    <!-- ArtistActivity -->
    <!--  -->
    <string name="cannot_display_artist">Impossible d\'afficher l\'artiste</string>
    <string name="artistIcon">Icone Artiste</string>
    <string name="facebookIcon">Lien vers facebook</string>
    <string name="youtubeIcon">Lien vers Youtube</string>
    <string name="twitterIcon">Lien vers Twitter</string>
    <string name="webIcon">Lien vers site web</string>

    <!--  -->
    <!-- ArtistWebView -->
    <!--  -->
    <string name="loading">Chargement...</string>

    <!--  -->
    <!-- InfosActivity -->
    <!--  -->
    <string name="infos_title_1">INFOS</string>
    <string name="infos_title_2">PRATIQUES</string>
    <string name="infoListItemIcon">Info</string>
    <string name="infoListCategoryArrow">Catégorie suivante</string>

    <!--  -->
    <!-- InfoActivity -->
    <!--  -->
    <string name="cannot_display_info">Impossible d\'afficher l\'info</string>
    <string name="action_type_see_on_map">Voir sur la carte</string>
    <string name="category">Catégorie : </string>

    <!--  -->
    <!-- Programmation Activity -->
    <!--  -->
    <string name="programmation_title_1">LA</string>
    <string name="programmation_title_2">TIMELINE</string>
    <string name="button_first_day">Vendredi 30</string>
    <string name="button_second_day">Samedi 31</string>
    <string name="main_stage">Scène principale</string>
    <string name="second_stage">Scène secondaire</string>
    <string name="programmation_icon">Programmation</string>

    <!--  -->
    <!-- Map Activity -->
    <!--  -->
    <string name="map_title_1">PLAN</string>
    <string name="map_title_2">INTERACTIF</string>
    <string name="map">Plan</string>
    <string name="map_popup_arrow">Ouvrir info</string>
    <string name="action_filter">Filtrer</string>
    <string name="action_global_view">Vue globale</string>
    <string name="action_detailed_view">Vue détaillée</string>
    <string name="filter">Filtrer</string>
    <string name="cancel">Annuler</string>

    <!--  -->
    <!-- Photo Activity -->
    <!--  -->
    <string name="photo_title_1">APPAREIL</string>
    <string name="photo_title_2">PHOTO</string>
    <string name="camera_take">Prendre</string>
    <string name="picture_taken">Photo prise</string>
    <string name="photo_taking_wait_message">Le filtre est appliqué à la photo</string>
    <string name="share_button">Partager</string>
    <string name="share_intent">Partagez !</string>
    <string name="unavailable_camera">Impossible d\'accéder à l\'appareil photo !</string>
    <string name="cannot_display_picture">Impossible d\'afficher la photo !</string>

    <!--  -->
    <!-- Partners Activity -->
    <!--  -->
    <string name="partners_title_1">NOS</string>
    <string name="partners_title_2">PARTENAIRES</string>
    <string name="partner_icon">logo partenaire</string>
    <string name="partners_header_text">Ils nous aident à faire vivre le festival</string>
    <string name="partner_has_no_website_linked">Ce partenaire n\'a pas de site web lié</string>
    
    
    <!--  -->
    <!-- Competition Fragment -->
    <!--  -->
    <string name="competition_title">Gagne ta place !</string>
    <string name="competition_button">Gagne ta place !</string>
    <string name="competition_text">Pour participer, envoie ton adresse mail. Un tirage au sort désignera le gagnant.</string>
    <string name="competition_begin">Inscription...</string>
    <string name="competition_end">Inscription effectuée.</string>
    <string name="competition_already_done">Inscription déjà effectuée.</string>

</resources>