<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    style="@style/DefaultDarkBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenuActivity" >

    <ImageView
        android:id="@+id/menu_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mainLogo"
        android:paddingBottom="20dp"
        android:src="@drawable/menu_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1" >

        <ImageButton
            android:id="@+id/artistsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/artistImageButtonDescription"
            android:scaleType="centerInside"
            android:src="@drawable/artists_menu_icon" />

        <ImageButton
            android:id="@+id/infosButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/infosImageButtonDescription"
            android:scaleType="centerInside"
            android:src="@drawable/infos_menu_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1" >

        <ImageButton
            android:id="@+id/programmationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/programmationImageButtonDescription"
            android:scaleType="centerInside"
            android:src="@drawable/programmation_menu_icon" />

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/planImageButtonDescription"
            android:scaleType="centerInside"
            android:src="@drawable/map_menu_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1" >

        <ImageButton
            android:id="@+id/photosButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/photosImageButtonDescription"
            android:scaleType="centerInside"
            android:src="@drawable/photos_menu_icon" />

        <ImageButton
            android:id="@+id/partnersButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/partnersImageButtonDescription"
            android:scaleType="centerInside"
            android:src="@drawable/partners_menu_icon" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_activity_footer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/social_network_links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/facebook_home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/facebook_icon"
                android:src="@drawable/facebook_home" />

            <ImageButton
                android:id="@+id/twitter_home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/twitter_icon"
                android:scaleType="center"
                android:src="@drawable/twitter_home" />

            <ImageButton
                android:id="@+id/google_plus_home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/google_plus_icon"
                android:scaleType="center"
                android:src="@drawable/google_plus_home" />
        </LinearLayout>

        <Button
            android:id="@+id/button_competition"
            style="@style/WhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/black_button"
            android:text="@string/competition_button"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/about"
            style="@style/WhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/about"
            android:textColor="#aaaaaa"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/show_news"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/news_panel"
            android:scaleType="centerInside"
            android:src="@drawable/news_panel" />

        <TextView
            android:id="@+id/news_content"
            style="@style/LightBackground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
        	android:scrollbars="vertical" />

        <!-- <ImageButton -->
        <!-- android:id="@+id/show_twitter" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="match_parent" -->
        <!-- android:layout_alignParentRight="true" -->
        <!-- android:adjustViewBounds="true" -->
        <!-- android:background="@null" -->
        <!-- android:contentDescription="@string/twitter_panel" -->
        <!-- android:scaleType="centerInside" -->
        <!-- android:src="@drawable/twitter_panel" /> -->


        <!-- <TextView -->
        <!-- android:id="@+id/twitter_content" -->
        <!-- style="@style/LightBackground" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="match_parent" -->
        <!-- android:gravity="center" -->
        <!-- android:textSize="20sp" /> -->
    </RelativeLayout>

</LinearLayout>