<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LightBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/back_button"
            android:padding="20dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/photo_title_1"
            style="@style/OrangeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back_button"
            android:text="@string/photo_title_1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/photo_title_2"
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/photo_title_1"
            android:text="@string/photo_title_2"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/header_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/header_icon"
            android:src="@drawable/photo_header_icon" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/picture_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/picture_taken"
        android:scaleType="centerInside" />

    <Button
        android:id="@+id/button_share"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/black_button"
        android:text="@string/share"
        android:textSize="24sp" />

</LinearLayout>