<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ArtistLinearLayout"
    style="@style/DefaultDarkBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProgrammationActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/back_button"
            android:padding="20dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/programmation_title_1"
            style="@style/OrangeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back_button"
            android:text="@string/programmation_title_1"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/programmation_title_2"
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/programmation_title_1"
            android:text="@string/programmation_title_2"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/header_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/header_icon"
            android:src="@drawable/programmation_header_icon" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/button_first_day"
            style="@style/WhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/button_first_day"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/day_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textOn=" "
            android:textOff=" "
            android:thumb="@drawable/switch_button"
            android:track="@drawable/switch_button_track" />

        <TextView
            android:id="@+id/button_second_day"
            style="@style/WhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/button_second_day"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/main_stage"
        style="@style/OrangeText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1E2827"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/main_stage"
        android:textSize="20sp" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" >

        <RelativeLayout
            android:id="@+id/main_stage_layout"
            android:layout_width="1560px"
            android:layout_height="150dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >
        </RelativeLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/second_stage"
        style="@style/OrangeText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1E2827"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/second_stage"
        android:textSize="20sp" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" >

        <RelativeLayout
            android:id="@+id/second_stage_layout"
            android:layout_width="1560px"
            android:layout_height="150dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >
        </RelativeLayout>
    </HorizontalScrollView>

</LinearLayout>