<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ArtistsLinearLayout"
    style="@style/DefaultDarkBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/back_button"
            android:padding="20dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/artists_title_1"
            style="@style/OrangeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back_button"
            android:text="@string/artists_title_1"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/artists_title_2"
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/artists_title_1"
            android:text="@string/artists_title_2"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/header_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/header_icon"
            android:src="@drawable/artist_header_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/action_alpha_sort"
            style="@style/WhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/action_alpha_sort"
            android:textSize="26sp" />

        <Switch
            android:id="@+id/sort_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/action_alpha_sort"
            android:padding="5dp"
            android:textOff=" "
            android:textOn=" "
            android:thumb="@drawable/switch_button"
            android:track="@drawable/switch_button_track" />

        <TextView
            android:id="@+id/action_type_sort"
            style="@style/WhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/sort_toggle"
            android:padding="5dp"
            android:text="@string/action_type_sort"
            android:textSize="26sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/artistsList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice" >
    </ListView>

</LinearLayout>