<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infosLinearLayout"
    style="@style/DefaultDarkBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/back_button"
            android:padding="20dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/infos_title_1"
            style="@style/OrangeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back_button"
            android:text="@string/infos_title_1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/infos_title_2"
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/infos_title_1"
            android:text="@string/infos_title_2"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/header_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/header_icon"
            android:src="@drawable/infos_header_icon" />
    </RelativeLayout>

    <ListView
        android:id="@+id/infosList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        android:padding="20dp" >
    </ListView>

</LinearLayout>